--- a/flex.html
+++ b/flex.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/flex.css" />
+    <link rel="stylesheet" href="css/flex.css" />
     <title>Flex</title>
   </head>
   <body>
@@ -14,11 +14,11 @@
           <p>Its a header</p>
         </div>
         <div class="header-link">
-          <a href="/index.html" class="button">Home page</a>
+          <a href="index.html" class="button">Home page</a>
         </div>
       </header>
       <main class="main">
-        <img src="/img/ukraine.jpg" alt="Ukraine" width="300" height="200" />
+        <img src="img/ukraine.jpg" alt="Ukraine" width="300" height="200" />
         <p>The footer is placed with flex</p>
       </main>
       <footer class="footer">Its a footer</footer>
