--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <label class="content-link" for="hider" id="clickme">Variants</label>
           <input type="checkbox" id="hider" />
           <ul class="colapse">
-            <li><a href="flex.html">Footer with flex</a></li>
+            <li><a href="pages/flex.html">Footer with flex</a></li>
             <li><a href="#">Footer with grid</a></li>
             <li><a href="#">Footer position absolut</a></li>
           </ul>
