--- a/pages/grid.html
+++ b/pages/grid.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/flex.css" />
-    <title>Flex</title>
+    <link rel="stylesheet" href="css/grid.css" />
+    <title>Grid</title>
   </head>
   <body>
     <div class="container">
@@ -19,7 +19,7 @@
       </header>
       <main class="main">
         <img src="img/ukraine.jpg" alt="Ukraine" width="300" height="200" />
-        <p>The footer is placed with flex</p>
+        <p>The footer is placed with grid</p>
       </main>
       <footer class="footer">Its a footer</footer>
     </div>
