--- a/pages/flex.html
+++ b/pages/flex.html
@@ -21,7 +21,7 @@
         <div class="main-content-wrapper">
           <div class="main-content-left">
             <img
-              src="/img/ukraine.jpg"
+              src="../img/ukraine.jpg"
               alt="Ukraine"
               width="300"
               height="200"
