--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
           <input type="checkbox" id="hider" />
           <ul class="colapse">
             <li><a href="pages/flex.html">Footer with flex</a></li>
-            <li><a href="#">Footer with grid</a></li>
-            <li><a href="#">Footer position absolut</a></li>
+            <li><a href="pages/grid.html">Footer with grid</a></li>
+            <li><a href="pages/position.html">Footer position absolut</a></li>
           </ul>
         </menu>
       </main>
