--- a/pages/grid.html
+++ b/pages/grid.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/grid.css" />
+    <link rel="stylesheet" href="../css/grid.css" />
     <title>Grid</title>
   </head>
   <body>
@@ -14,12 +14,38 @@
           <p>Its a header</p>
         </div>
         <div class="header-link">
-          <a href="index.html" class="button">Home page</a>
+          <a href="../index.html" class="button">Home page</a>
         </div>
       </header>
       <main class="main">
-        <img src="img/ukraine.jpg" alt="Ukraine" width="300" height="200" />
-        <p>The footer is placed with grid</p>
+        <div class="main-content-wrapper">
+          <div class="main-content-left">
+            <img
+              src="../img/ukraine.jpg"
+              alt="Ukraine"
+              width="300"
+              height="200"
+            />
+          </div>
+          <div class="main-content-right">
+            <pre>
+  html: .container>header+main+footer
+<hr>
+CSS:
+  body,
+  html {
+    height: 100%;
+  }
+
+  .container {
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    height: 100%;
+  }
+            </pre>
+          </div>
+        </div>
+        <p class="subtitle">The footer is placed with grid</p>
       </main>
       <footer class="footer">Its a footer</footer>
     </div>
