--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <ul class="colapse">
             <li><a href="pages/flex.html">Footer with flex</a></li>
             <li><a href="pages/grid.html">Footer with grid</a></li>
-            <li><a href="pages/position.html">Footer position absolut</a></li>
+            <li><a href="pages/position.html">Footer position absolute</a></li>
           </ul>
         </menu>
       </main>
