--- a/pages/position.html
+++ b/pages/position.html
@@ -34,14 +34,11 @@
               />
             </div>
             <div class="main-right">
-              <pre class="main-right-text">
-                
+              <pre class="main-right-text">               
   html:
-
     .container>.content-wrapper>header+main^footer
  <hr>
   css:
-
     .container {
       position: relative;
       height: 100%;
@@ -52,7 +49,7 @@
     }
 
     footer {
-      position: absolut;
+      position: absolute;
       bottom: 0;
       width: 100%;
       height: 70px;
